--- a/composer.json
+++ b/composer.json
@@ -40,5 +40,10 @@
     },
     "require-dev": {
         "orchestra/testbench": "3.2.*"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "0.1.x-dev"
+        }
     }
 }
