--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     ],
     "require": {
         "endeavors/maxmd-http": "*",
-        "endeavors/maxmd-apiauth": "*"
+        "endeavors/maxmd-apiauth": "*",
+        "endeavors/support-vo": "0.1.*@dev"
     },
     "autoload": {
         "psr-4": {
@@ -43,7 +44,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "0.2.x-dev"
+            "dev-master": "0.3.x-dev"
         }
     }
 }
