switch to maxmd public api

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     "require": {
         "endeavors/maxmd-http": "*",
         "endeavors/maxmd-apiauth": "*",
-        "endeavors/support-vo": "1.0.*@dev"
+        "endeavors/support-vo": "1.2.*@dev",
+        "endeavors/maxmd-support": "dev-master"
     },
     "autoload": {
         "psr-4": {
