--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     "require": {
         "endeavors/maxmd-http": "*",
         "endeavors/maxmd-apiauth": "*",
-        "endeavors/support-vo": "1.2.*@dev",
+        "endeavors/support-vo": "^2.0",
         "endeavors/maxmd-support": "dev-develop as 0.1.0"
     },
     "autoload": {
